[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "essent-dynamic-pricing"
version = "0.1.0"
description = "Async client for Essent dynamic energy prices"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.13"
authors = [
  {name = "Home Assistant Community"},
]
dependencies = [
  "aiohttp>=3.9",
]

[project.optional-dependencies]
test = [
  "pytest>=8.2",
  "pytest-asyncio>=0.24",
]

[project.urls]
Homepage = "https://github.com/jaapp/py-essent-dynamic-pricing"
Repository = "https://github.com/jaapp/py-essent-dynamic-pricing"

[tool.pytest.ini_options]
asyncio_mode = "auto"
